# rtdetrv2_tensorrt_ros2

./: .gitignore  README.md  build_docker.sh  run-docker.sh  run_docker.sh  useful_commands.txt
.devcontainer/: Dockerfile  devcontainer.json
configs/: runtime.yml
configs/dataset/: autoware_detection.yml  bdd100k_detection.yml
configs/rtdetrv2/: rtdetrv2_r101vd_6x_960_autoware.yml  rtdetrv2_r101vd_6x_960_bdd100k.yml  rtdetrv2_r101vd_6x_autoware.yml  rtdetrv2_r18vd_120e_100q_autoware.yml
configs/rtdetrv2/include/: dataloader.yml  dataloader_960.yml  optimizer.yml  rtdetrv2_r50vd_100queries.yml  rtdetrv2_r50vd_960.yml
node/: .gitignore  Dockerfile  README.md  shortcuts.bashrc
node/.devcontainer/: devcontainer.json
node/src/rtdetrv2_tensorrt_node/: CMakeLists.txt  package.xml
node/src/rtdetrv2_tensorrt_node/cmake/: FindTensorRT.cmake
node/src/rtdetrv2_tensorrt_node/include/rtdetrv2_tensorrt_node/: label_map.hpp  rtdetrv2_tensorrt_node.hpp  trt_rtdetrv2_engine.hpp
node/src/rtdetrv2_tensorrt_node/launch/: rtdetrv2_tensorrt.launch.xml
node/src/rtdetrv2_tensorrt_node/src/: label_map.cpp  rtdetrv2_tensorrt_node.cpp  trt_engine_info.cpp  trt_rtdetrv2_engine.cpp
references/: README.md
references/deploy/: rtdetrv2_torch.py
src/data/transforms/: _transforms.py
src/misc/: visualizer.py
tools/: bdd100k_to_coco.py  export_onnx.py  export_trt.py
