<?xml version="1.0"?>
<package format="3">
  <name>rtdetrv2_tensorrt_node</name>
  <version>0.1.0</version>
  <description>Minimal TensorRT sample package to validate C++ linking with colcon.</description>
  <maintainer email="maintainer@example.com">TensorRT Sample</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tier4_perception_msgs</build_depend>
  <build_depend>autoware_perception_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>opencv</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tier4_perception_msgs</exec_depend>
  <exec_depend>autoware_perception_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
